// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs changes active index 1`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-YaZNy jGpSIW"
    direction="row"
  >
    <div
      class="StyledBox-YaZNy ewisib"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="true"
        aria-expanded="true"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ dBmCXc"
        >
          <strong>
            Tab 1
          </strong>
        </span>
      </button>
    </div>
    <div
      class="StyledBox-YaZNy iBrLbU"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="false"
        aria-expanded="false"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ caxVjs"
          color="dark-4"
        >
          Tab 2
        </span>
      </button>
    </div>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;

exports[`Tabs changes to second tab 1`] = `
<div
  className="StyledGrommet-gKbdxL gNdtBf"
>
  <div
    role="tablist"
  >
    <div
      aria-label={undefined}
      className="StyledBox-YaZNy jGpSIW"
      direction="row"
    >
      <div
        aria-label={undefined}
        className="StyledBox-YaZNy iBrLbU"
        direction="column"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <button
          aria-expanded={false}
          aria-label={undefined}
          aria-selected={false}
          className="StyledButton-qbvYY fFFoxu"
          disabled={false}
          href={undefined}
          icon={undefined}
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="tab"
          tabIndex="0"
          type="button"
        >
          <span
            className="StyledText-dmaDlZ caxVjs"
            color="dark-4"
          >
            Tab 1
          </span>
        </button>
      </div>
      <div
        aria-label={undefined}
        className="StyledBox-YaZNy ewisib"
        direction="column"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <button
          aria-expanded={true}
          aria-label={undefined}
          aria-selected={true}
          className="StyledButton-qbvYY fFFoxu"
          disabled={false}
          href={undefined}
          icon={undefined}
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="tab"
          tabIndex="0"
          type="button"
        >
          <span
            className="StyledText-dmaDlZ dBmCXc"
          >
            <strong>
              Tab 2
            </strong>
          </span>
        </button>
      </div>
    </div>
    <div
      aria-label="Tab 2 Tab Contents"
      role="tabpanel"
    >
      Tab body 2
    </div>
  </div>
</div>
`;

exports[`Tabs renders complex Tab title 1`] = `
<div
  className="StyledGrommet-gKbdxL gNdtBf"
>
  <div
    role="tablist"
  >
    <div
      aria-label={undefined}
      className="StyledBox-YaZNy jGpSIW"
      direction="row"
    >
      <div
        aria-label={undefined}
        className="StyledBox-YaZNy ewisib"
        direction="column"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <button
          aria-expanded={true}
          aria-label={undefined}
          aria-selected={true}
          className="StyledButton-qbvYY fFFoxu"
          disabled={false}
          href={undefined}
          icon={undefined}
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="tab"
          tabIndex="0"
          type="button"
        >
          <div>
            Tab 1
          </div>
        </button>
      </div>
      <div
        aria-label={undefined}
        className="StyledBox-YaZNy iBrLbU"
        direction="column"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <button
          aria-expanded={false}
          aria-label={undefined}
          aria-selected={false}
          className="StyledButton-qbvYY fFFoxu"
          disabled={false}
          href={undefined}
          icon={undefined}
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="tab"
          tabIndex="0"
          type="button"
        >
          <div>
            Tab 2
          </div>
        </button>
      </div>
    </div>
    <div
      aria-label="[object Object] Tab Contents"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs renders with Tab 1`] = `
<div
  className="StyledGrommet-gKbdxL gNdtBf"
>
  <div
    role="tablist"
  >
    <div
      aria-label={undefined}
      className="StyledBox-YaZNy jGpSIW"
      direction="row"
    >
      <div
        aria-label={undefined}
        className="StyledBox-YaZNy ewisib"
        direction="column"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <button
          aria-expanded={true}
          aria-label={undefined}
          aria-selected={true}
          className="StyledButton-qbvYY fFFoxu"
          disabled={false}
          href={undefined}
          icon={undefined}
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="tab"
          tabIndex="0"
          type="button"
        >
          <span
            className="StyledText-dmaDlZ dBmCXc"
          >
            <strong>
              Tab 1
            </strong>
          </span>
        </button>
      </div>
      <div
        aria-label={undefined}
        className="StyledBox-YaZNy iBrLbU"
        direction="column"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <button
          aria-expanded={false}
          aria-label={undefined}
          aria-selected={false}
          className="StyledButton-qbvYY fFFoxu"
          disabled={false}
          href={undefined}
          icon={undefined}
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="tab"
          tabIndex="0"
          type="button"
        >
          <span
            className="StyledText-dmaDlZ caxVjs"
            color="dark-4"
          >
            Tab 2
          </span>
        </button>
      </div>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs renders without Tab 1`] = `
<div
  className="StyledGrommet-gKbdxL gNdtBf"
>
  <div
    role="tablist"
  >
    <div
      aria-label={undefined}
      className="StyledBox-YaZNy jGpSIW"
      direction="row"
    />
    <div
      aria-label=" Tab Contents"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`Tabs sets on hover 1`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-YaZNy jGpSIW"
    direction="row"
  >
    <div
      class="StyledBox-YaZNy ewisib"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="true"
        aria-expanded="true"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ dBmCXc"
        >
          <strong>
            Tab 1
          </strong>
        </span>
      </button>
    </div>
    <div
      class="StyledBox-YaZNy iBrLbU"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="false"
        aria-expanded="false"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ caxVjs"
          color="dark-4"
        >
          Tab 2
        </span>
      </button>
    </div>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;

exports[`Tabs sets on hover 2`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-YaZNy jGpSIW"
    direction="row"
  >
    <div
      class="StyledBox-YaZNy ewisib"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="true"
        aria-expanded="true"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ dBmCXc"
        >
          <strong>
            Tab 1
          </strong>
        </span>
      </button>
    </div>
    <div
      class="StyledBox-YaZNy gTDmSD"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="false"
        aria-expanded="false"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ caxVjs"
          color="dark-4"
        >
          Tab 2
        </span>
      </button>
    </div>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;

exports[`Tabs sets on hover 3`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-YaZNy jGpSIW"
    direction="row"
  >
    <div
      class="StyledBox-YaZNy ewisib"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="true"
        aria-expanded="true"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ dBmCXc"
        >
          <strong>
            Tab 1
          </strong>
        </span>
      </button>
    </div>
    <div
      class="StyledBox-YaZNy gTDmSD"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="false"
        aria-expanded="false"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ caxVjs"
          color="dark-4"
        >
          Tab 2
        </span>
      </button>
    </div>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;

exports[`Tabs sets on hover 4`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-YaZNy jGpSIW"
    direction="row"
  >
    <div
      class="StyledBox-YaZNy ewisib"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="true"
        aria-expanded="true"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ dBmCXc"
        >
          <strong>
            Tab 1
          </strong>
        </span>
      </button>
    </div>
    <div
      class="StyledBox-YaZNy iBrLbU"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY fFFoxu"
        tabindex="0"
        role="tab"
        aria-selected="false"
        aria-expanded="false"
        type="button"
      >
        <span
          class="StyledText-dmaDlZ caxVjs"
          color="dark-4"
        >
          Tab 2
        </span>
      </button>
    </div>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;
